// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render health causes 1`] = `
<div
  className="system-info-health-info"
>
  <StatusIndicator
    color="green"
  />
</div>
`;

exports[`should not render health causes 2`] = `
<div
  className="system-info-health-info"
>
  <StatusIndicator
    color="yellow"
  />
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="system-info-health-info"
>
  <HealthCauseItem
    className="spacer-right"
    health="RED"
    healthCause="foo"
    key="0"
  />
  <Tooltip
    overlay="system.current_health_of_x.Foo"
    placement="left"
  >
    <span>
      <StatusIndicator
        color="red"
        size="big"
      />
    </span>
  </Tooltip>
</div>
`;

exports[`should render multiple health causes 1`] = `
<div
  className="system-info-health-info"
>
  <HealthCauseItem
    className="spacer-right"
    health="YELLOW"
    healthCause="foo"
    key="0"
  />
  <HealthCauseItem
    className="spacer-right"
    health="YELLOW"
    healthCause="bar"
    key="1"
  />
  <StatusIndicator
    color="yellow"
  />
</div>
`;
